Fix Bakcground bleeding on items

--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@
 @import "theme.css";
 
 * {
-  background-color: rgba(30, 30, 46, .1);
   color: @accent;
-
   border: none;
   border-radius: 0;
   min-height: 0;
   font-family: 'CaskaydiaCove Nerd Font';
   font-size: 12px;
+}
+
+/* 2. Keep the main Waybar window base transparent */
+window#waybar {
+  background-color: rgba(30, 30, 46, .25);
 }
 
 /*-----------------
@@ -139,18 +142,18 @@ tooltip {
 }
 
 #custom-left_div.1 {
-  color: @memory;
+  color: @time;
   background-color: transparent;
 }
 
 #memory {
-  background-color: @memory;
+  background-color: @time;
   color: @text;
   padding: 0 10px;
 }
 
 #custom-left_inv.1 {
-  color: @memory;
+  color: @time;
   background-color: transparent;
 }
 
